Add option WITH_OPENMP to dependencies project.
This adds the same option (`WITH_OPENMP`) in DGtal.
Useful for speeding up thinning.

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 
 option(WITH_VTK "Build VTK, ITK will use it too, if WITH_ITK is enabled" ON)
 option(WITH_ITK "Build ITK, DGtal will use it too." ON)
+option(WITH_OPENMP "Build DGtal with OPENMP support." ON)
 option(WITH_TBB "Build TBB. Only for Linux (gcc). Needed for gcc for include <execution> (stl_parallel)." ON)
 option(WITH_QT5 "Enable Qt5 module for VTK and DGtal. Qt5 and QGLViewer have to be found in the system." OFF)
 option(CLEAN_BUILD_ARTIFACTS "Create target clean_artifacts to remove artifacts and external_project folders. Needs to call the target: make/ninja clean_artifacts." ON)
@@ -25,6 +26,7 @@ message(STATUS "OUTPUT_BUILD_DIR: ${OUTPUT_BUILD_DIR}")
 message(STATUS "NUM_CORES: ${NUM_CORES}")
 message(STATUS "WITH_VTK: ${WITH_VTK}")
 message(STATUS "WITH_ITK: ${WITH_ITK}")
+message(STATUS "WITH_OPENMP: ${WITH_OPENMP}")
 message(STATUS "WITH_TBB: ${WITH_TBB}")
 message(STATUS "WITH_QT5: ${WITH_QT5}")
 
@@ -236,6 +238,11 @@ if(WITH_ITK)
   list(APPEND _DGtal_optional_cmake_args
     -DWITH_ITK:BOOL=ON
     -DITK_DIR:STRING=${ITK_BUILD_DIR}
+    )
+endif()
+if(WITH_OPENMP)
+  list(APPEND _DGtal_optional_cmake_args
+    -DWITH_OPENMP:BOOL=ON
     )
 endif()
 if(_compiler_is_msvc)
