Update DGtal to use DGtalLUT
DGtal PR: https://github.com/DGtal-team/DGtal/pull/1496
phcerdan branch: add_dgtal_lut

This fixes the problem with `loadTable(table_filepath)` that arise in python.
`table_filepath` is fixed to build or install tree, and does not allow
re-alocation of the libraries. Basically is impossible to use
`DGtal::functions::loadTable` without development files.

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -225,12 +225,13 @@ endif()
 #################### DGtal #######################
 ##################################################
 
-set(DGtal_GIT_TAG 92ab4d0d62f0e5490f1890efdf904547d17515b9) # 25-May-2020
+# set(DGtal_GIT_TAG 92ab4d0d62f0e5490f1890efdf904547d17515b9) # 25-May-2020
+set(DGtal_GIT_TAG add_dgtal_lut) # 26-May-2020
 message(STATUS "DGtal_VERSION: ${DGtal_GIT_TAG}")
 set(DGtal_BUILD_DIR ${OUTPUT_BUILD_DIR}/DGtal-build)
 set(DGtal_SRC_FOLDER_NAME DGtal-src)
 set(DGtal_SRC_DIR ${OUTPUT_BUILD_DIR}/${DGtal_SRC_FOLDER_NAME})
-set(DGtal_GIT_REPOSITORY "https://github.com/DGtal-team/DGtal")
+set(DGtal_GIT_REPOSITORY "https://github.com/phcerdan/DGtal")
 set(_DGtal_depends ep_boost)
 set(_DGtal_optional_cmake_args)
 if(WITH_ITK)
@@ -273,6 +274,7 @@ ExternalProject_Add(ep_dgtal
       -DBUILD_SHARED_LIBS:BOOL=OFF
       -DBUILD_TESTING:BOOL=OFF
       -DBUILD_EXAMPLES:BOOL=OFF
+      -DWITH_DGtalLUT:BOOL=ON
       -DCMAKE_FIND_PACKAGE_PREFER_CONFIG:BOOL=ON
       -DBoost_DIR=${BOOST_BUILD_DIR}/lib/cmake/Boost-${BOOST_VERSION_DOTS}
       ${_DGtal_optional_cmake_args}
