Python: Wraps histogram

--- a/wrap/submodules/generate/histo/CMakeLists.txt
+++ b/wrap/submodules/generate/histo/CMakeLists.txt
@@ -1,12 +1,8 @@
 set(current_sources_
-  sggenerate_init_py.cpp
-  simulated_annealing_generator_py.cpp
-  contour_length_generator_py.cpp
+  histo_init_py.cpp
   )
 set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
 list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
-
-add_subdirectory(histo)
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
