Change Boost download URL to sourceforge
The server in bintray is down (probably only temporarily)

--- a/dependencies/docker/Dockerfile-dockcross-manylinux2014-base
+++ b/dependencies/docker/Dockerfile-dockcross-manylinux2014-base
@@ -61,10 +61,15 @@ ENV BOOST_VERSION_MINOR=68
 ENV BOOST_VERSION_PATCH=0
 ENV BOOST_VERSION ${BOOST_VERSION_MAJOR}_${BOOST_VERSION_MINOR}_${BOOST_VERSION_PATCH}
 ENV BOOST_VERSION_DOTS ${BOOST_VERSION_MAJOR}.${BOOST_VERSION_MINOR}.${BOOST_VERSION_PATCH}
-ENV BOOST_SRC_DIR ${BUILD_PATH}/boost-src
+ENV BOOST_SRC_FOLDER_NAME boost-src
+ENV BOOST_SRC_DIR ${BUILD_PATH}/${BOOST_SRC_FOLDER_NAME}
 ENV BOOST_BUILD_DIR ${BUILD_PATH}/boost-build
 ENV BOOST_CMAKE_CONFIG_FOLDER ${BOOST_BUILD_DIR}/lib/cmake/Boost-${BOOST_VERSION_DOTS}
-RUN wget "https://dl.bintray.com/boostorg/release/${BOOST_VERSION_DOTS}/source/boost_${BOOST_VERSION}.tar.gz" && \
+ENV BOOST_GIT_REPOSITORY https://github.com/boostorg/boost
+ENV BOOST_GIT_TAG boost-${BOOST_VERSION_DOTS}
+ENV BOOST_URL "https://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION_DOTS}/boost_${BOOST_VERSION}.tar.gz/download"
+WORKDIR $BUILD_PATH
+RUN wget ${BOOST_URL} && \
     mkdir ${BOOST_SRC_DIR} && \
     tar --strip-components=1 -xzf boost_${BOOST_VERSION}.tar.gz -C ${BOOST_SRC_DIR} && \
     rm boost_${BOOST_VERSION}.tar.gz && \
