Add option to visualize_spatial_graph_with_image to draw edge_points
Also refactor the variables holding the hypercube dimensions of the
glyph representing the edge points. From three double variables, lengthX
lengthY, lengthZ, to an std::array<double,3> cube_length

This introduces adding SGLocate as a dependency to analyze_graph,
and visualize_graph_and_image

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -64,6 +64,7 @@ if(SG_MODULE_ANALYZE)
     add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
     target_link_libraries(analyze_graph SGExtract SGAnalyze)
     target_link_libraries(analyze_graph SGAnalyze)
+    target_link_libraries(analyze_graph SGLocate)
     target_link_libraries(analyze_graph ${_Boost_components})
     target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
     target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
@@ -135,6 +136,7 @@ if(${_modern_VTK_available})
     if(SG_MODULE_VISUALIZE)
         add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
         target_link_libraries(visualize_graph_and_image SGVisualize)
+        target_link_libraries(visualize_graph_and_image SGLocate)
         target_link_libraries(visualize_graph_and_image ${_Boost_components})
         target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
         # target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
