--- a/dependencies/docker/Dockerfile-dockcross-manylinux2014-base
+++ b/dependencies/docker/Dockerfile-dockcross-manylinux2014-base
@@ -69,7 +69,7 @@ ENV BOOST_GIT_REPOSITORY https://github.com/boostorg/boost
 ENV BOOST_GIT_TAG boost-${BOOST_VERSION_DOTS}
 ENV BOOST_URL "https://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION_DOTS}/boost_${BOOST_VERSION}.tar.gz/download"
 WORKDIR $BUILD_PATH
-RUN wget ${BOOST_URL} && \
+RUN wget ${BOOST_URL} -O boost_${BOOST_VERSION}.tar.gz && \
     mkdir ${BOOST_SRC_DIR} && \
     tar --strip-components=1 -xzf boost_${BOOST_VERSION}.tar.gz -C ${BOOST_SRC_DIR} && \
     rm boost_${BOOST_VERSION}.tar.gz && \
