Add VISUALIZE module
And add to python `write_graph_to_vtk_unstructured_grid`
that wraps functionality of cpp `convert_to_vtk_unstructured_grid`

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -21,7 +21,7 @@ if(SG_MODULE_LOCATE)
   list(APPEND enabled_libs_ SGLocate)
 endif()
 if(SG_MODULE_VISUALIZE)
-  # add_subdirectory(submodules/visualize)
+  add_subdirectory(submodules/visualize)
   list(APPEND enabled_libs_ SGVisualize)
 endif()
 if(SG_BUILD_SCRIPTS)
