External Histo: Update Histogram to use Mean
Update includes two commits upstream commits:

51b376bdc13b31ff4712f826eac50f899127d6c6: Add free function: Mean
3f0b954ad89652d1e208af2d7eb4bafd363b9f77: Add google tests to ctest. Increase CMake min version to 3.10

--- a/external/histo/CMakeLists.txt
+++ b/external/histo/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.10)
 cmake_policy(SET CMP0022 NEW)
 
 project(histo)
@@ -39,5 +39,6 @@ endif()
 set(ENABLE_GOOGLE_TEST "OFF" CACHE BOOL "Requires Gtest installed")
 
 if(ENABLE_GOOGLE_TEST)
+    enable_testing()
     add_subdirectory(test)
 endif()
