Python: Wrap locate module
This include wrappings vtkPoints, vtkPointLocator and
vtkMergePoints (derived from vtkPointLocator).

Define vtkSmartPointer as a PYBIND_DECLARE_HOLDER_TYPE.

Wrap for sgext:
- get_vtk_points_from_graph
- get_vtk_points_from_graphs

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -18,6 +18,7 @@ if(SG_MODULE_DYNAMICS)
   list(APPEND enabled_libs_ SGDynamics)
 endif()
 if(SG_MODULE_LOCATE)
+  add_subdirectory(submodules/locate)
   list(APPEND enabled_libs_ SGLocate)
 endif()
 if(SG_MODULE_VISUALIZE)
