Python: Wrap compare module

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -25,6 +25,10 @@ if(SG_MODULE_VISUALIZE)
   add_subdirectory(submodules/visualize)
   list(APPEND enabled_libs_ SGVisualize)
 endif()
+if(SG_MODULE_COMPARE)
+  add_subdirectory(submodules/compare)
+  list(APPEND enabled_libs_ SGCompare)
+endif()
 if(SG_BUILD_SCRIPTS)
   add_subdirectory(submodules/scripts)
   list(APPEND enabled_libs_ ${DGTAL_LIBRARIES})
@@ -43,7 +47,7 @@ pybind11_add_module(_sgext
   )
 target_link_libraries(_sgext PRIVATE ${enabled_libs_})
 target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}) # For pybind11_common.h
-target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/submodules) # For #include "core/sgcore_common_py"
+target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/submodules) # For #include "locate/sglocate_common.h"
 target_include_directories(_sgext PRIVATE ${enabled_include_dirs_})
 if(SG_REQUIRES_VTK)
   target_compile_definitions(_sgext PRIVATE SG_USING_VTK)
@@ -65,6 +69,9 @@ if(SG_MODULE_VISUALIZE)
 endif()
 if(SG_MODULE_LOCATE)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_LOCATE_ENABLED)
+endif()
+if(SG_MODULE_COMPARE)
+  target_compile_definitions(_sgext PRIVATE SG_MODULE_COMPARE_ENABLED)
 endif()
 if(SG_BUILD_SCRIPTS)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_SCRIPTS_ENABLED)
