Add overload to transform_graph_to_physical_space
Without using ITK.

Also wrap in python:
- transform_graph_to_physical_space
With the existing signature using an ITK image as reference,
and the new one, using origin, spacing, and direction.
Where the direction matrix is represented as a std::array<double, 9>.

- transform_graph_to_index_space
With the existing ITK signature, the non-ITK is not implemented.

--- a/wrap/itk/CMakeLists.txt
+++ b/wrap/itk/CMakeLists.txt
@@ -3,6 +3,7 @@ set(current_sources_
   itk_image_py.cpp
   itk_image_io_py.cpp
   itk_view_image_py.cpp
+  transform_to_physical_point_with_itk_py.cpp
   )
 set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
 list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
