CMake: Add language C to the project.
The order is important, `C CXX` (the default) might generate problems, see:
https://discourse.itk.org/t/cmake-finding-wrong-compiler-in-my-itk-project-but-finds-correct-compiler-in-itk-library/3220/10

Not 100% sure/reproduced, but also added because compiling with
```bash
CC=clang CXX=clang++ cmake ...
```
generated a problem where google-test (added with FetchContent/add_subdirectory)
was not respecting the CC env variable, and still using the system gcc instead of clang.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 project(SGEXT
   VERSION 0.9.0
-  LANGUAGES CXX)
+  LANGUAGES CXX C)
 message(STATUS "SGEXT version: ${SGEXT_VERSION}")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
