CMake: Mark include_directories of dependencies as SYSTEM
To disable warnings from external projects.

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -39,7 +39,7 @@ target_link_libraries(thin SGCore)
 target_link_libraries(thin ${_Boost_components} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
-target_include_directories(thin PRIVATE ${DGTAL_INCLUDE_DIRS})
+target_include_directories(thin SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS})
 if(SG_MODULE_VISUALIZE)
     target_link_libraries(thin SGVisualize )
     target_compile_definitions(thin PUBLIC SG_MODULE_VISUALIZE_ENABLED)
@@ -67,7 +67,7 @@ if(SG_MODULE_ANALYZE)
     target_link_libraries(analyze_graph ${_Boost_components})
     target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
     target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
-    target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
+    target_include_directories(analyze_graph SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
     if(SG_MODULE_VISUALIZE)
         target_link_libraries(analyze_graph SGVisualize)
         target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
@@ -88,7 +88,7 @@ target_link_libraries(create_distance_map SGCore )
 target_link_libraries(create_distance_map ${_Boost_components})
 target_link_libraries(create_distance_map ${ITK_LIBRARIES} )
 target_link_libraries(create_distance_map ${DGTAL_LIBRARIES} )
-target_include_directories(create_distance_map PRIVATE ${DGTAL_INCLUDE_DIRS} )
+target_include_directories(create_distance_map SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
 add_executable(mask_distance_map_with_thin_image mask_distance_map_with_thin_image.cpp)
 target_link_libraries(mask_distance_map_with_thin_image SGCore )
@@ -102,7 +102,7 @@ if(SG_MODULE_VISUALIZE_WITH_QT AND SG_MODULE_ANALYZE)
     target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
     target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
     target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
-    target_include_directories(highlight_image_points PRIVATE ${DGTAL_INCLUDE_DIRS} )
+    target_include_directories(highlight_image_points SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
     add_executable(visualize_histograms_from_file
         visualize_histograms_from_file.cpp
