Wrap compare.spatial_graph_difference

--- a/wrap/submodules/compare/CMakeLists.txt
+++ b/wrap/submodules/compare/CMakeLists.txt
@@ -2,6 +2,7 @@ set(current_sources_
   sgcompare_init_py.cpp
   extend_low_info_graph_py.cpp
   add_graph_peninsulas_py.cpp
+  spatial_graph_difference_py.cpp
   )
 set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
 list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
