Add module scripts.
Split cpp-scripts into a library (SGScripts) and a CLI with executables.

CMake option `SG_BUILD_SCRIPTS` is removed
and `SG_MODULE_SCRIPTS` and `SG_BUILD_CLI` are added.

The default values have not changed (ON for both), so a user building with
default options shouldn't notice any difference.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,11 @@ set(CMAKE_INSTALL_PYTHONLIBDIR sgext) # Install folder for python libs
 set(CMAKE_BUILD_PYTHONLIBDIR ${PROJECT_BINARY_DIR}/sgext) # copy python libs at build time
 
 include(CMakeDependentOption)
-option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
+option(SG_BUILD_CLI "Build cpp-scripts with CLI executables." ON)
 option(SG_BUILD_TESTING "Enable Tests" OFF)
 option(SG_BUILD_ENABLE_VALGRIND "Enable Valgrind as a memchecker for tests (require debug symbols)" OFF)
 mark_as_advanced(SG_BUILD_ENABLE_VALGRIND)
+option(SG_MODULE_SCRIPTS "High level functions (no CLI)." ON)
 option(SG_MODULE_ANALYZE "Analyze the graph properties." ON)
 option(SG_MODULE_COMPARE "Logic to compare and merge low and high information graphs." ON)
 option(SG_MODULE_LOCATE "Use VTK KDtree for graph point location." ON)
@@ -46,7 +47,7 @@ include(handle_dependencies)
 if(VISUALIZE OR SG_MODULE_VISUALIZE OR SG_MODULE_LOCATE OR SG_MODULE_COMPARE)
   set(SG_REQUIRES_VTK TRUE)
 endif()
-if(SG_BUILD_SCRIPTS OR SG_ENABLE_ITK)
+if(SG_MODULE_SCRIPTS OR SG_BUILD_CLI OR SG_ENABLE_ITK)
   set(SG_REQUIRES_ITK TRUE)
 endif()
 
@@ -256,8 +257,11 @@ endif()
 if(SG_MODULE_DYNAMICS)
   add_subdirectory(modules/dynamics)
 endif()
+if(SG_MODULE_SCRIPTS)
+  add_subdirectory(modules/scripts)
+endif()
 
-if(SG_BUILD_SCRIPTS)
+if(SG_BUILD_CLI)
   add_subdirectory(cpp-scripts)
 endif()
 
