--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -30,13 +30,9 @@ if(SG_MODULE_COMPARE)
   add_subdirectory(submodules/compare)
   list(APPEND enabled_libs_ SGCompare)
 endif()
-if(SG_BUILD_SCRIPTS)
+if(SG_MODULE_SCRIPTS)
   add_subdirectory(submodules/scripts)
-  list(APPEND enabled_libs_ ${DGTAL_LIBRARIES})
-  list(APPEND enabled_libs_ ${ITK_LIBRARIES})
-  list(APPEND enabled_libs_ Boost::filesystem)
-  list(APPEND enabled_include_dirs_ "${CMAKE_SOURCE_DIR}/cpp-scripts/")
-  list(APPEND enabled_include_system_dirs_ "${DGTAL_INCLUDE_DIRS}")
+  list(APPEND enabled_libs_ SGScripts)
   # Add itk wrapping of Image
   add_subdirectory(itk)
 endif()
@@ -75,7 +71,7 @@ endif()
 if(SG_MODULE_COMPARE)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_COMPARE_ENABLED)
 endif()
-if(SG_BUILD_SCRIPTS)
+if(SG_MODULE_SCRIPTS)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_SCRIPTS_ENABLED)
 endif()
 
