--- a/wrap/test/CMakeLists.txt
+++ b/wrap/test/CMakeLists.txt
@@ -10,7 +10,7 @@ if(SG_MODULE_DYNAMICS)
   add_subdirectory(dynamics)
 endif()
 
-if(SG_BUILD_SCRIPTS)
+if(SG_MODULE_SCRIPTS)
   add_subdirectory(scripts)
   add_subdirectory(itk)
 endif()
