--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -19,57 +19,37 @@ set(_scripts_targets_visualize_using_qt # Using Qt (DGtal or VTK)
     )
 
 set(_Boost_components Boost::program_options Boost::filesystem)
+set(_scripts_libs
+    SGScripts
+    Boost::program_options
+    )
 
 if(SG_MODULE_LOCATE)
     add_executable(graph_to_vtp graph_to_vtp.cpp)
-    target_link_libraries(graph_to_vtp SGLocate )
-    target_link_libraries(graph_to_vtp ${_Boost_components} )
-    target_link_libraries(graph_to_vtp ${VTK_LIBRARIES} )
+    target_link_libraries(graph_to_vtp ${_scripts_libs})
 endif()
 
-add_executable(fill_holes_binary fill_holes_binary.cpp fill_holes_function.cpp)
-target_link_libraries(fill_holes_binary ${_Boost_components} )
-target_link_libraries(fill_holes_binary ${ITK_LIBRARIES} )
+add_executable(fill_holes_binary fill_holes_binary.cpp)
+target_link_libraries(fill_holes_binary ${_scripts_libs})
 if(SG_MODULE_VISUALIZE_WITH_QT)
     target_compile_definitions(fill_holes_binary PUBLIC VISUALIZE)
 endif()
 
-add_executable(thin thin.cpp thin_function.cpp)
-target_link_libraries(thin SGCore)
-target_link_libraries(thin ${_Boost_components} )
-target_link_libraries(thin ${ITK_LIBRARIES} )
-target_link_libraries(thin ${DGTAL_LIBRARIES} )
-target_include_directories(thin SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS})
-if(SG_MODULE_VISUALIZE)
-    target_link_libraries(thin SGVisualize )
-    target_compile_definitions(thin PUBLIC SG_MODULE_VISUALIZE_ENABLED)
-    if(SG_MODULE_VISUALIZE_WITH_QT)
-        target_compile_definitions(thin PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
-        target_compile_definitions(thin PRIVATE VISUALIZE)
-    endif()
-endif()
+add_executable(thin thin.cpp)
+target_link_libraries(thin ${_scripts_libs})
 
 if(SG_MODULE_COMPARE)
     add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
-    target_link_libraries(merge_low_high_info_graphs SGCompare )
-    target_link_libraries(merge_low_high_info_graphs ${_Boost_components})
+    target_link_libraries(merge_low_high_info_graphs ${_scripts_libs})
     if(SG_MODULE_VISUALIZE_WITH_QT)
-        target_link_libraries(merge_low_high_info_graphs SGVisualize )
         target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
     endif()
 endif()
 
 if(SG_MODULE_ANALYZE)
-    add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
-    target_link_libraries(analyze_graph SGExtract SGAnalyze)
-    target_link_libraries(analyze_graph SGAnalyze)
-    target_link_libraries(analyze_graph SGLocate)
-    target_link_libraries(analyze_graph ${_Boost_components})
-    target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
-    target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
-    target_include_directories(analyze_graph SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
+    add_executable(analyze_graph analyze_graph.cpp)
+    target_link_libraries(analyze_graph ${_scripts_libs})
     if(SG_MODULE_VISUALIZE)
-        target_link_libraries(analyze_graph SGVisualize)
         target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
         if(SG_MODULE_VISUALIZE_WITH_QT)
             target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
@@ -83,34 +63,19 @@ if(SG_MODULE_ANALYZE)
     target_link_libraries(histograms_from_data ${_Boost_components})
 endif()
 
-add_executable(create_distance_map create_distance_map.cpp create_distance_map_function.cpp)
-target_link_libraries(create_distance_map SGCore )
-target_link_libraries(create_distance_map ${_Boost_components})
-target_link_libraries(create_distance_map ${ITK_LIBRARIES} )
-target_link_libraries(create_distance_map ${DGTAL_LIBRARIES} )
-target_include_directories(create_distance_map SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
+add_executable(create_distance_map create_distance_map.cpp)
+target_link_libraries(create_distance_map ${_scripts_libs} )
 
 add_executable(mask_distance_map_with_thin_image mask_distance_map_with_thin_image.cpp)
-target_link_libraries(mask_distance_map_with_thin_image SGCore )
-target_link_libraries(mask_distance_map_with_thin_image ${_Boost_components} )
-target_link_libraries(mask_distance_map_with_thin_image ${ITK_LIBRARIES} )
+target_link_libraries(mask_distance_map_with_thin_image ${_scripts_libs} )
 
 if(SG_MODULE_VISUALIZE_WITH_QT AND SG_MODULE_ANALYZE)
     add_executable(highlight_image_points highlight_image_points.cpp)
-    target_link_libraries(highlight_image_points ${_Boost_components} )
-    target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
-    target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
+    target_link_libraries(highlight_image_points ${_scripts_libs})
     target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
-    target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
-    target_include_directories(highlight_image_points SYSTEM PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
-    add_executable(visualize_histograms_from_file
-        visualize_histograms_from_file.cpp
-        # ${SG_SRC_WITH_VTK_AND_QT}
-        )
-    target_link_libraries(visualize_histograms_from_file ${_Boost_components})
-    target_link_libraries(visualize_histograms_from_file SGAnalyze SGVisualize )
-    target_link_libraries(visualize_histograms_from_file ${ITK_LIBRARIES} )
+    add_executable(visualize_histograms_from_file visualize_histograms_from_file.cpp)
+    target_link_libraries(visualize_histograms_from_file ${_scripts_libs})
     target_link_libraries(visualize_histograms_from_file Qt5::Widgets Qt5::Xml )
 endif()
 
@@ -118,36 +83,9 @@ endif()
 if(${_modern_VTK_available})
     if(SG_MODULE_VISUALIZE)
         add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
-        target_link_libraries(visualize_graph_and_image SGVisualize)
-        target_link_libraries(visualize_graph_and_image SGLocate)
-        target_link_libraries(visualize_graph_and_image ${_Boost_components})
-        target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
-        # target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
+        target_link_libraries(visualize_graph_and_image ${_scripts_libs})
     endif()
 endif()
-
-if(SG_MODULE_VISUALIZE)
-    list(APPEND _scripts_targets ${_scripts_targets_visualize})
-endif()
-
-if(SG_MODULE_VISUALIZE_WITH_QT)
-    list(APPEND _scripts_targets ${_scripts_targets_visualize_using_qt})
-endif()
-
-# Install
-# At least install the headers
-set(_scripts_headers
-    analyze_graph_function.hpp
-    create_distance_map_function.hpp
-    fill_holes_function.hpp
-    mask_image_function.hpp
-    scripts_types.hpp
-    thin_function.hpp
-    view_image_function.hpp
-    )
-
-install(FILES ${_scripts_headers}
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sgext)
 
 # Even if you install the targets, the dependencies are not bundled/packaged
 # The user would have to set LD_LIBRARY_PATH poiting to the dependency libraries
