Test: Create test library to access fixture images in cpp tests
CMake generates a header (not-installed) with the variable
`sgext_fixture_images_path` pointing to the `images` folder of
the source tree.

An interface library with just this header is also generated
`FixtureImagesFolder`.
To be used for cpp tests:
 - Link the test to 'FixtureImagesFolder` library in CMake
 - `#include sgext_fixture_images.hpp`
 - use `sgext_fixture_images_path` + `/image.nrrd`

--- a/modules/scripts/CMakeLists.txt
+++ b/modules/scripts/CMakeLists.txt
@@ -75,6 +75,10 @@ if(SG_MODULE_VISUALIZE)
     endif()
 endif()
 
+if(SG_BUILD_TESTING)
+  add_subdirectory(test)
+endif()
+
 install(TARGETS ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
         EXPORT SGEXTTargets
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT runtime
