--- a/test/fixtures/sgext_fixture_images.hpp.in
+++ b/test/fixtures/sgext_fixture_images.hpp.in
@@ -3,9 +3,14 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+#ifndef SGEXT_FIXTURE_IMAGES_HPP
+#define SGEXT_FIXTURE_IMAGES_HPP
+
 #include <string>
 
 namespace SG {
   // path to the images folder in the source tree of sgext
   const std::string sgext_fixture_images_path="@_SGEXT_FIXTURE_IMAGES_FOLDER@";
 } // end namespace SG
+
+#endif
